--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -21,6 +21,7 @@ html
                 position:absolute;
                 top:0;
                 left:0;
+                z-index: 2;
             }
             h1 {
                 color: #dedede;
@@ -45,6 +46,9 @@ html
                 background-color: #000;
                 margin: 0;
                 padding: 0;
+            }
+            #webgl {
+                opacity: 0;
             }
             #pageOverlay,
             #webgl {
