--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -14,8 +14,20 @@ html
         link(rel='mask-icon' href='/assets/favicon/safari-pinned-tab.svg' color='#5bbad5')
         meta(name='msapplication-TileColor' content='#da532c')
         meta(name='theme-color' content='#000000')
+        link(href='./assets/1999.css' rel='stylesheet')
         style.
-
+            #page-wrapper {
+                position: relative;
+                z-index: 0;
+            }
+            #webgl-wrapper {
+                position: absolute;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
             #loader_symbols {
                 display: block;
                 position:absolute;
@@ -23,7 +35,7 @@ html
                 left:0;
                 z-index: 2;
             }
-            h1 {
+            h1#loadingSign {
                 color: #dedede;
                 display: flex;
                 position: absolute;
@@ -31,13 +43,13 @@ html
                 bottom: 1rem;
                 right: 2rem;
             }
-            h1 div {
+            h1#loadingSign div {
                 display: inline-block;
                 font-family: monospace;
                 font-size: 2.5rem;
                 padding: 1rem 2.5rem 1rem 0;
             }
-            h1 img {
+            h1#loadingSign img {
                 height: 5rem;
                 width: 5rem;
             }
@@ -98,43 +110,43 @@ html
                     "virtual-office": "./virtual_office/main.js"
                 }
             }
-    body( onload = "_init()" )
-        canvas#loader_symbols Canvas is not supported in your browser.
-        canvas#loader_image Canvas is not supported in your browser.
-        h1#loadingSign
-            div Loading
-            img(src='/assets/images/tail-spin.svg')
-        include ../templates/door_image.pug
-        noscript
-            | This website requires Javascript for the full experience. As you don&apos;t have Javascript enabled, you are seeing
-            | the 1999 experience.
-        a#exitSign
-            img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
-        iframe#pageOverlay
-        #webgl
-        script#vertexshader(type='x-shader/x-vertex').
-            varying vec2 vUv;
-            void main() {
-                vUv = uv;
-                gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-            }
-        script#fragmentshader(type='x-shader/x-fragment').
-            // Kudos to https://github.com/mrdoob/three.js/issues/14104#issuecomment-1536582334
-            uniform sampler2D baseTexture;
-            uniform sampler2D bloomTexture;
-            varying vec2 vUv;
-            void main() {
-                vec4 base_color = texture2D(baseTexture, vUv);
-                vec4 bloom_color = texture2D(bloomTexture, vUv);
-                float lum = 0.21 * bloom_color.r + 0.71 * bloom_color.g + 0.07 * bloom_color.b;
-                gl_FragColor = vec4(base_color.rgb + bloom_color.rgb, max(base_color.a, lum));
-            }
+    body(onload="_init();")
+        include ./1999_layout.pug
+        #webgl-wrapper
+            canvas#loader_symbols
+            canvas#loader_image
+            h1#loadingSign
+                div Loading
+                img(src='/assets/images/tail-spin.svg')
+            include ../templates/door_image.pug
+            a#exitSign
+                img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
+            iframe#pageOverlay
+            #webgl
+            script#vertexshader(type='x-shader/x-vertex').
+                varying vec2 vUv;
+                void main() {
+                    vUv = uv;
+                    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+                }
+            script#fragmentshader(type='x-shader/x-fragment').
+                // Kudos to https://github.com/mrdoob/three.js/issues/14104#issuecomment-1536582334
+                uniform sampler2D baseTexture;
+                uniform sampler2D bloomTexture;
+                varying vec2 vUv;
+                void main() {
+                    vec4 base_color = texture2D(baseTexture, vUv);
+                    vec4 bloom_color = texture2D(bloomTexture, vUv);
+                    float lum = 0.21 * bloom_color.r + 0.71 * bloom_color.g + 0.07 * bloom_color.b;
+                    gl_FragColor = vec4(base_color.rgb + bloom_color.rgb, max(base_color.a, lum));
+                }
 
-        script(src='./vendor/tweakpane-3.1.10.min.js')
-        script(src='./vendor/tween-21.0.0.umd.min.js')
-        script(async src='./vendor/es-module-shims-1.8.0.js')
+            script(src='./vendor/tweakpane-3.1.10.min.js')
+            script(src='./vendor/tween-21.0.0.umd.min.js')
+            script(async src='./vendor/es-module-shims-1.8.0.js')
+            
+            script
+                include ../scripts/scenograph.js
+            script
+                include ../scripts/matrix.js
         
-        script
-            include ../scripts/scenograph.js
-        script
-            include ../scripts/matrix.js
