--- a/src/assets/1999.css
+++ b/src/assets/1999.css
@@ -80,7 +80,7 @@ a.icon_button img:hover {
   width: 1.5rem;
 }
 
-h1 {
+.content h1 {
   font-family: Stigmature, "Brush Script MT", cursive;
   color: white;
   text-shadow: 2.5px 2.5px 5px #FF69CB;
