--- a/src/assets/1999.css
+++ b/src/assets/1999.css
@@ -80,7 +80,7 @@ a.icon_button img:hover {
   width: 1.5rem;
 }
 
-.content h1 {
+#page-wrapper h1 {
   font-family: Stigmature, "Brush Script MT", cursive;
   color: white;
   text-shadow: 2.5px 2.5px 5px #FF69CB;
@@ -276,8 +276,8 @@ form input[type='submit']:hover {
   .header img {
     max-width: inherit;
   }
-  h1 {
-    font-size: 8rem;
+  #page-wrapper h1 {
+    font-size: 10rem;
   }
   #page-wrapper {
     align-items: center;
