Fixing main chugging intro

--- a/src/pages/contact_us.pug
+++ b/src/pages/contact_us.pug
@@ -19,7 +19,7 @@ block append page
           a(href='mailto:team@openstudios.xyz') team@openstudios.xyz
           |  or alternatively fill out
           |             the contact form below and we will endeaver to respond to your enquiry shortly.
-        form(method='post' action='https://mailform.yourserver.com/your-target-file-name')
+        form(method='post' action='http://mailform.openstudios.xyz:3000/website')
           label(for='fullname' type='text') Your Name
           br
           input(type='text' name='firstName' placeholder='Full Name')
