Adding esbuild watch script

--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -111,6 +111,9 @@ html
                 }
             }
     body(onload="_init();")
+        noscript
+            style.
+                h1#loadingSign { display: none }
         include ./1999_layout.pug
         #webgl-wrapper
             canvas#loader_symbols
