Refactored templating to build special iframe page variants

--- a/src/pages/contact_us.pug
+++ b/src/pages/contact_us.pug
@@ -3,7 +3,7 @@ permalink: "contact_us.html"
 dynamicPermalink: false
 ---
 
-extends ../templates/1999.pug
+extends ../templates/1999_html.pug
 
 block append title
   | Contact us | Open Studios
