--- a/src/pages/portfolio.pug
+++ b/src/pages/portfolio.pug
@@ -3,7 +3,7 @@ permalink: "portfolio.html"
 dynamicPermalink: false
 ---
 
-extends ../templates/1999.pug
+extends ../templates/1999_html.pug
 
 block append title
   | Portfolio | Open Studios
