--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -5,27 +5,32 @@
             hr.line
             hr.line
             hr.line
-        .h1
-            a(href='./home.html' title='Home')
-                img(src='./assets/images/logo-wide.png' alt='Logo')
+        if ! isIframe
+            .h1
+                a(href='./' title='Home')
+                    img(src='/assets/images/logo-wide.png' alt='Logo')
+        else
+            .h1
+                a(title='Home')
+                    img(src='/assets/images/logo-wide.png' alt='Logo')
         .lineset.second
             hr.line
             hr.line
             hr.line
             hr.line
-    noscript
+    if ! isIframe
         .menu
             ul
                 li
-                    a(href='./about_us.html') About Us
+                    a(href='/about_us.html') About Us
                 li
-                    a(href='./services.html') Services
+                    a(href='/services.html') Services
                 li
-                    a(href='./case_studies.html') Case Studies
+                    a(href='/case_studies.html') Case Studies
                 li
-                    a(href='./portfolio.html') Portfolio
+                    a(href='/portfolio.html') Portfolio
                 li
-                    a(href='./contact_us.html') Contact Us
+                    a(href='/contact_us.html') Contact Us
     block page
     .footer
         .lineset.second
