--- a/src/pages/services.pug
+++ b/src/pages/services.pug
@@ -3,7 +3,7 @@ permalink: "services.html"
 dynamicPermalink: false
 ---
 
-extends ../templates/1999.pug
+extends ../templates/1999_html.pug
 
 block append title
   | Services | Open Studios
