--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -7,8 +7,8 @@ html
 
         title Open Studios - Perth, Western Australia
 
-        include ./favicons.pug
-        link(href='./assets/1999.css' rel='stylesheet')
+        include ./head_common.pug
+
         style.
             #page-wrapper {
                 position: relative;
