--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -6,9 +6,8 @@ html
         base(href="./")
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
-        include ./favicons.pug
+        include ./head_common.pug
 
-        link(href='./assets/1999.css' rel='stylesheet')
     body
         - var isIframe = false
         include ./1999_layout.pug
