--- a/src/content/contact_us.pug
+++ b/src/content/contact_us.pug
@@ -16,9 +16,9 @@ h1 Contact us
         label(for='name' type='text') Your Name
         br
         input(type='text' name='name' placeholder='Full Name')
-        label(for='from' type='text') Email
+        label(for='email' type='text') Email
         br
-        input(type='email' name='from' placeholder='Email address')
+        input(type='email' name='email' placeholder='Email address')
         label(for='message' type='text') Message
         br
         textarea(name='message' placeholder='A few words describing your enquiry.' cols='50' rows='10')
