--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -94,7 +94,7 @@ html
                 box-shadow: 0px 0px 7.5px 7.5px #00FF00;
                 border-color: #00FF00;
             }
-    body(onload="_init();")
+    body(onload="_init( 1000 );")
         noscript
             style.
                 h1#loadingSign { display: none }
