--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -38,6 +38,7 @@ html
                 padding: 0;
             }
             #webgl {
+                display: none;
                 opacity: 0;
             }
             #pageOverlay,
