--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -66,7 +66,7 @@ html
                 border: solid 1px #00DD00;
                 border-radius: 1rem;
                 padding: 0.5rem;
-                position: absolute;
+                position: fixed;
                 top: 0;
                 right: 0;
                 z-index: 10001;
