Hiding pokematrix on homepage and its bootup

--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -110,6 +110,10 @@ html
                     right: 3rem;
                 }
             }
+
+            #pokematrix {
+                display: none;
+            }
     body(onload="_init( 1000 );")
         noscript
             style.
