--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -31,10 +31,11 @@
                     a(href='/portfolio.html') Portfolio
                 li
                     a(href='/contact_us.html') Contact Us
-        canvas#pokematrixCanvas
-        canvas#pokematrixImage
-        a#pokematrixSign
-            img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
+        #pokematrix
+            canvas#pokematrixCanvas
+            canvas#pokematrixImage
+            a#pokematrixSign
+                img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
         include ../templates/exit_image.pug
     block page
     .footer
