Fixing mobile interaction clash

--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -103,6 +103,7 @@ html
             #pokematrixSign {
                 opacity: 0;
                 cursor: pointer;
+                z-index: 10003;
             }
             #exitSign {
                 display: none;
