Updating to latest blog post

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,13 +21,13 @@ block append page
               img(src="/assets/sites/paulbrzeski.png")
               span.hidden Paul Brzeski
       .featured
-        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-june-2023-9c2a50a300b4")
-          img(src="/assets/cancer.png")
+        a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-july-2023-1121f2bd141f")
+          img(src="/assets/leo.png")
         div(class="drop-shadow")
           h3
-            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-june-2023-9c2a50a300b4") Studio Roundup for June 2023
+            a(target="_blank" href="https://medium.com/@open_studios/studio-roundup-for-july-2023-1121f2bd141f") Studio Roundup for July 2023
           p.
-            This month we worked continued pre-production of Demonology, launched new jewellery and took the first steps to rebranding.
+            July is a month of celebration so let's celebrate! Happy Independence Day! Viva Magenta! Dive into PR on Artstation.
     #main
       div(class="w-full")
         h1.logo
