--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -1,10 +1,59 @@
+style.
+  .portfolio_item {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  tr td:nth-child(1) {
+    width: 30%;
+  }
+  td {
+    padding: 1rem;
+  }
+
+
 h1 Portfolio
 .content
   .row
     .column
-      img(src='./assets/images/p1.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style=' width: 100%; height: auto;')
+      h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Social Banners, 3D Renders and Finished Product of Pink Spinel 18k White Gold Sakura Pendant
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+        td Production gallery: 
+        td
+          a(href='https://www.artstation.com/artwork/RyNNRy') See it on Artstation
+        tr
+        td Final result:
+        td
+          a(href='https://grayjewellery.com.au/collections/blossoms') Visit the product page
+
     .column
-      img(src='./assets/images/p2.jpg' style=' width: 100%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style=' width: 100%; height: auto;')
+      h3 Yule Watercolour Campaign Banners for Winter Season of 2022
+      table(class='portfolio_item')
+        tr
+          td Deliverables:
+          td Watercolour banners designed for marketing the Yule design for the winter season.
+        tr
+          td Client: 
+          td
+            a(href='https://grayjewellery.com.au/') Garrett Ray Jewellery
+        tr
+        td Production gallery: 
+        td
+          a(href='https://www.artstation.com/artwork/vDwby6') See it on Artstation
+        tr
+        td Final result:
+        td
+          a(href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') Visit the product page
   .row
     .column
       img(src='./assets/images/p3.jpg' style=' width: 100%; height: auto;')
